# dify-openapi-ts

./: .editorconfig  .gitignore  .gitmodules  README.md  eslint.config.js  package.json  pnpm-lock.yaml  redocly.yaml  renovate.json
dify-openapi/: .env.example  .gitignore  .gitmodules  README.md  README.zh.md  justfile  pyproject.toml
dify-openapi/.github/workflows/: ci.yml
dify-openapi/fern/: fern.config.json  generators.yml
dify-openapi/misc/: fern_sdk_hotfix_patch.sh
dify-openapi/misc/official_api_doc_changes/: 0.15.3__1.0.0.diff  1.0.1__1.1.0.diff  1.1.0__1.1.1.diff  1.1.2__1.1.3.diff  1.1.3__1.2.0.diff  README.md
dify-openapi/schema/: README.md  app_advanced_chat.en.yaml  app_advanced_chat.zh.yaml  app_chat.en.yaml  app_chat.zh.yaml  app_generation.en.yaml  app_generation.zh.yaml  app_workflow.en.yaml  app_workflow.zh.yaml  external_knowledge_base.en.yaml  external_knowledge_base.zh.yaml  knowledge_base.en.yaml  knowledge_base.zh.yaml
dify-openapi/schema/overlays/: app_advanced_chat.en.overlay.yaml  app_chat.en.overlay.yaml  app_generation.en.overlay.yaml  app_workflow.en.overlay.yaml  external_knowledge_base.en.overlay.yaml  knowledge_base.en.overlay.yaml
dify-openapi/scripts/: detect-chinese-char-in-files.py  gen_diff_by_versions.py  preview-schema.py  prompt-generater.py
dify-openapi/src/dify_sdk/: __init__.py  client.py  environment.py
dify-openapi/src/dify_sdk_testing/: __init__.py
dify-openapi/tests/: conftest.py
dify-openapi/tests/app/: test_advanced_chat_api.py  test_annotations_api.py  test_api.py  test_workflow_api.py
(+250 files in other folders)
